\name{NEWS}
\title{NEWS file for the gCMAP}

\section{Changes in version 1.1.5}{
  \itemize{
    \item{BUGFIX}{ induceCMAPCollection method was updated to fix a bug that prevented processing of certain single-sample eSets.}
    \item{NEW}{ New parameters 'center.z' and 'center.log_fc' for the generate_gCMAP_NChannelSet function, centering each column of the score matrix on the column mean, median or density peak. (Internally, the new 'center_eSet' function is called.)}
    \item{NEW}{ New function 'center_eSet' to center columns of eSet channels on either their kernel density peak, their mean or their median.}
  }
}	

\section{Changes in version 1.1.4}{
  \itemize{
    \item{BUGFIX}{ The gealm_score method is not defined for queries with missing values and will now return the corresponding error message.}
    \itme{BUGFIX}{ GeneSetCollections containing only one set are processed correctly by gsealm_score.}
  }
}	

\section{Changes in version 1.1.3}{
  \itemize{
    \item{BUGFIX}{ Corrected sign of effect size for fisher_score for perfect overlap between set and query.}
  }
}	

\section{Changes in version 1.1.2}{
  \itemize{
    \item{BUGFIX}{ Fixed log-odds calculation in fisher_score: non-overlapping sets now get a log odds ratio of 0.}
  }
}	

\section{Changes in version 1.1.1}{
  \itemize{
    \item{IMPROVED}{ Reduced memory footprint of induceCMAPCollection method for bigmemory-backed eSet objects.}
  }
}	

\section{Changes in version 1.1.0}{
  \itemize{
    \item{NEW}{ Version number was increased for the Bioconductor release.}
  }
}	

\section{Changes in version 0.99.6}{
  \itemize{
    \item{IMPROVED}{ Updated mapIdentifiers method for SignedGeneSet class now handles more different annotation types.}
  }
}	

\section{Changes in version 0.99.5}{
  \itemize{
    \item{NEW}{ The BigMatrix package changed its name to bigmemoryExtras. Currently, bigmemoryExtras only supports Mac and Unix platforms, thus gCMAP does not support Windows, either.}
  }
}	