@@ -1,6 +1,11 @@
 \name{NEWS}
 \title{NEWS file for the gCMAP}
 
+\section{Changes in version 1.1.6}{
+  \itemize{
+    \item{BUGFIX}{ Fixed error in generate_gCMAP_NChannelSet for CountDataSets with data.frame in pData slot. }
+}
+}
 \section{Changes in version 1.1.5}{
   \itemize{
     \item{BUGFIX}{ induceCMAPCollection method was updated to fix a bug that prevented processing of certain single-sample eSets.}
